# justice40-tool

./: .gitignore  .pre-commit-config.yaml  .toml  40194750-289e28ad174c3a577ea1.js  404.html  CODE_OF_CONDUCT-es.md  CODE_OF_CONDUCT.md  COMMUNITY_GUIDELINES.md  CONTRIBUTING-es.md  CONTRIBUTING.md  DATASETS.md  INSTALLATION-es.md  INSTALLATION.md  LICENSE  LICENSE-es.md  LICENSE.md  MAINTAINERS-es.md  MAINTAINERS.md  QUICKSTART.md  README-es.md  README.md  a4b4947cdf6117f03525792c2b41ec3c24623e37-02f7f7b07042f9c6d3ff.js  a4b4947cdf6117f03525792c2b41ec3c24623e37-377255c7e73386c625f2.js  a4b4947cdf6117f03525792c2b41ec3c24623e37-870c59908d27d401c088.js  a4b4947cdf6117f03525792c2b41ec3c24623e37-aa4ee288f501066285e1.js  a4b4947cdf6117f03525792c2b41ec3c24623e37-b0684ef2eef2fe1de0cf.js  app-09f9b8513924e23a26fc.js  app-15a10388e0d9a8100ef9.js  app-2122e83cab6bdd8089c4.js  app-404d7df65849d4125f83.js  app-55c92fec8bef1c938435.js  app-68fe6912a8bb592e3c2b.js  app-73ce266aac50ba0b0c8a.js  app-9b0754b91865fc6467b4.js  app-d03203879a37ead5307d.js  app-e557c60a659e281e5569.js  app-f703313eea3278602b96.js  app-fbefc3f6a2e6424ab293.js  chunk-map.json  component---src-pages-404-tsx-0034cde69eb6e625b59e.js  (+62 more)
.github/: CODEOWNERS  (+1 more)
data/data-pipeline/: .flake8  .pre-commit-config.yaml  Dockerfile  INSTALLATION.md  README-es.md  README.md  application.py  config.py  conftest.py  pyproject.toml  pytest.ini  quick_lookup.ipynb  requirements.txt  settings.toml  tox.ini  utils.py
data/data-pipeline/data/census/csv/: fips_states_2010.csv  us.csv
data/data-pipeline/data_pipeline/: .pre-commit-config.yaml  application.py  comparator.py  config.py  constants.py  utils.py
data/data-pipeline/data_pipeline/comparison_tool/: README.md  run_all_comparisons.sh
data/data-pipeline/data_pipeline/etl/: base.py  constants.py  datasource.py  downloader.py  runner.py
data/data-pipeline/data_pipeline/files/: README-version-1.0.md  readme-version-beta.md
data/data-pipeline/data_pipeline/ipython/: ACS Validate.ipynb  CDC_Covid_Death_Rates_12_13_2021.ipynb  EJScreen Validate.ipynb  Score Validate.ipynb  Score_Dissolve_Script.ipynb  TractArea.ipynb  Untitled.ipynb  aggregate_burden_exploration.ipynb  aggregate_score_explore (income bounded.ipynb  aggregate_score_explore (not income bounded).ipynb  agricultural_loss_indicator.ipynb  ami_explore.ipynb  cal_environ_hud_comparison_12102021.ipynb  census_explore.ipynb  check_tribal_count.ipynb  comparative_analysis_se_12_29_2021_spatial.ipynb  compare_take_2_2010_and_2020_zip_codes.ipynb  compare_tiles_and_geoJson_files.ipynb  compare_two_score_files_for_differences.ipynb  county_lookup.ipynb  eAMLIS_and_lat_long.ipynb  ejscreen_load.ipynb  explore_adjacency.ipynb  explore_eamlis.ipynb  generate_fuds_test_data.ipynb  geojson_compare_tiles.ipynb  geopandas_speed_test.ipynb  greenspace_indicator.ipynb  hud_eda_reference_12_27_2021.ipynb  hud_eda_se_12_09_2021-revised-denominator.ipynb  hud_eda_se_12_09_2021.ipynb  hud_eda_se_12_11_2011_relative_differences_between_methodologies.ipynb  hud_eda_se_12_12_2011_relative_differences_between_methodologies-ranking-percentile.ipynb  hud_eda_se_12_19_2011_investigate_sixthousand_candidate_tracts_revised_methodology.ipynb  hud_eda_se_12_20_2011_investigate_sixthousand_candidate_tracts_revised_methodology_visualizations.ipynb  hud_eda_se_12_21_2021-revised-denominator_explore_20_tracts.ipynb  hud_eda_se_12_22_2021-revised-denominator_explore_austin_af_analysis.ipynb  hud_eda_se_12_26_2011_relative_differences_between_methodologies-ranking-percentile-comparison-difference-presentation.ipynb  hud_eda_se_12_26_2011_relative_differences_between_methodologies-ranking-percentile-ejscreen-burden.ipynb  hud_eda_se_12_26_2011_relative_differences_between_methodologies-ranking-percentile-score-l-burdened.ipynb  (+19 more)
data/data-pipeline/data_pipeline/score/: adding_variables_to_score.md  field_names.py  score.py  score_a.py  score_b.py  score_c.py  score_calculator.py  score_d.py  score_f.py  score_g.py  score_h.py  score_i.py  score_k.py  score_l.py  score_m.py  score_narwhal.py  score_runner.py  utils.py
data/data-pipeline/data_pipeline/tests/: conftest.py  score_fixtures.py  test_etl.py  test_score_calculation.py  test_score_output.py  test_tiles_smoketests.py
data/data-pipeline/data_pipeline/tile/: generate.py
data/data-pipeline/etl/: base.py  runner.py
data/data-pipeline/etl/score/: etl_score.py  etl_score_geo.py  etl_score_post.py
data/data-pipeline/ipython/: ACS Validate.ipynb  EJScreen Validate.ipynb  Score Validate.ipynb  Score_Dissolve_Script.ipynb  county_lookup.ipynb  scoring_comparison.ipynb
data/data-pipeline/notebooks/: float-to-int-missing-data.ipnb  float-to-int-missing-data.ipynb
data/data-pipeline/scripts/: run-liccheck.sh
data/data-pipeline/tile/: generate.py
data/data-roadmap/: README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
score/: .flake8  .gitginore  Dockerfile  README.md  application.py  config.py  pyproject.toml  requirements.txt  settings.toml  tox.ini  utils.py
score/data/: CalEnviroScreen_4.0_2021.csv  fips_states_2010.csv
score/data/census/csv/: fips_states_2010.csv
score/etl/: base.py  runner.py
score/etl/datasets/: ejscreen_2020.py
score/etl/score/: etl.py  etl_county_state_score.py  etl_score.py  etl_score_post.py
score/etl/sources/calenviroscreen/: etl.py
score/etl/sources/census/: download_cbg.py  etl.py  etl_utils.py  utils.py
score/etl/sources/census_acs/: etl.py
score/etl/sources/ejscreen/: etl.py  etl_utils.py
score/etl/sources/housing_and_transportation/: etl.py
score/etl/sources/hud_housing/: etl.py
score/etl/sources/hud_recap/: etl.py
score/ipython/: Score_Dissolve_Script.ipynb  calenviroscreen_etl.ipynb  census_etl.ipynb  country_lookup.ipynb  county_lookup.ipynb  ejscreen_etl.ipynb  housing_and_transportation_etl.ipynb  hud_housing_etl.ipynb  hud_recap_etl.ipynb  lead_score_etl.ipynb  score_calc.ipynb  score_calc_0.1.ipynb  scoring_comparison.ipynb  test.ipynb
score/scripts/: download_cbg.py  generate_mbtiles.py  utils.py
score/tile/: generate.py
(+13626 files in other folders)
