[tool.poetry]
name = "score"
version = "0.1.0"
description = "ETL and Generation of Justice 40 Score"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "etl" },
]

[tool.poetry.dependencies]
python = "^3.7.1"
ipython = "^7.24.1"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
numpy = "^1.21.0"
pandas = "^1.2.5"
requests = "^2.25.1"
click = "^8.0.1"
dynaconf = "^3.1.4"
types-requests = "^2.25.0"
CensusData = "^1.13"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = {version = "^21.6b0", allow-prereleases = true}
tox = "^3.24.0"
pylint = "^2.9.3"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# configures some basic black settings per this article:
# https://ljvmiranda921.github.io/notebook/2018/06/21/precommits-using-black-and-flake8/
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
  | env
)/
'''

[tool.pylint."MESSAGE CONTROL"]
disable = [
  "C0114",  # Disables module docstrings
  "R0201",  # Disables method could have been a function
  "R0903"  # Disables too few public methods
]
